Fix some spacing on review deploy (#2382)
* Add support for collapsible callouts

* aeolian comments

* fix sizing

* Fix bug with collapsed form values

* use ipfs in creation and load ipfs images in project logo

* fix bad rebase

* Add loading state for go to project when clicked

* Fix Specific Funding Target showing infinite when switching from inifinite to specific

* Change amount form item based on amountType

* Hide token minting callout on disabled

* Fix some spacing on review deploy

--- a/src/styles/create/index.scss
+++ b/src/styles/create/index.scss
@@ -17,11 +17,19 @@
   border-color: var(--stroke-disabled);
 }
 
+.wizard-create .ant-collapse-header {
+  padding: 1.5rem 0 !important;
+}
+
 .wizard-create .ant-collapse-header-text {
   color: var(--text-primary);
   span {
     color: var(--text-secondary);
   }
+}
+
+.wizard-create .ant-collapse-content-box {
+  padding-bottom: 0 !important;
 }
 
 .wizard-create .select-card-header {
